# zash

./: LICENSE  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: packages.yml
locale/: bg.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
pkgbuild/: PKGBUILD
src/zash/: __init__.py  app.py  helpers.py  window.py
src/zash/core/: tasks.py
src/zash/data/: ai_history_manager.py  command_manager_models.py
src/zash/filemanager/: manager.py  operations.py
src/zash/sessions/: models.py  operations.py  storage.py  tree.py
src/zash/settings/: config.py  highlights.py  manager.py
src/zash/state/: window_state.py
src/zash/terminal/: _highlighter_impl.py  ai_assistant.py  manager.py  spawner.py  tabs.py
src/zash/terminal/highlighter/: __init__.py  output.py  shell_input.py
src/zash/ui/: actions.py  color_scheme_dialog.py  sidebar_manager.py  window_ui.py
src/zash/ui/dialogs/: ai_config_dialog.py  base_dialog.py  highlight_dialog.py  preferences_dialog.py
src/zash/ui/widgets/: inline_context_menu.py
src/zash/utils/: backup.py  crypto.py  icons.py  logger.py  osc7.py  osc7_tracker.py  platform.py  security.py  ssh_config_parser.py  translation_utils.py
usr/share/applications/: io.github.leoberbert.zash.desktop
usr/share/kio/servicemenus/: zash-remote.desktop  zash.desktop
usr/share/nautilus-python/extensions/: zash.py
usr/share/nemo/actions/: zash-remote.nemo_action  zash.nemo_action
